--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A simple express initial template.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "NODE_ENV=development nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +26,7 @@
     "express": "^4.17.1",
     "express-promise-router": "^4.1.1",
     "fs": "^0.0.1-security",
+    "knex": "^2.2.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
