--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "NODE_ENV=development nodemon server.js",
-      "db:migrate-up": "npx knex --knexfile knexfile.js migrate:up --env ${NODE_ENV:=development}",
-    "db:migrate-down": "npx knex --knexfile knexfile.js migrate:down --env ${NODE_ENV:=development}"
+    "db:migrate-up": "npx knex --knexfile knexfile.js migrate:up --env ${NODE_ENV:=development}",
+    "db:migrate-down": "npx knex --knexfile knexfile.js migrate:down --env ${NODE_ENV:=development}",
+    "heroku-postbuild": "npm run db:migrate-up"
   },
   "repository": {
     "type": "git",
