--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/duyvu997/express-init-template#readme",
   "dependencies": {
+    "aws-sdk": "^2.1227.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
